--- a/views/about.hbs
+++ b/views/about.hbs
@@ -1,4 +1,4 @@
 <section>
     <h2>About this project:</h2>
-    <p>This is a free to use use. It's a project using third-party API.</p>
+    <p>This is a free to use app. It's a project using third-party API.</p>
 </section>
