Added Favourite teams page; Writing in DB

--- a/static/css/site.css
+++ b/static/css/site.css
@@ -13,7 +13,8 @@ html::after {
     opacity: 0.7;
     top: 0; left: 0; bottom: 0; right: 0;
     position: absolute;
-    z-index: -1; 
+    z-index: -1;
+    min-height: 100vh;
 }
 
 body {
@@ -127,6 +128,10 @@ table tbody td.Promotion,
 table tbody td.Championship.round,
 table tbody td.Champions.League {
     background-color: #359;
+}
+
+table tbody td.Europa.League {
+    background-color: rgb(3, 114, 68);
 }
 
 table tbody td.Europa.League.Qualification {
